# pkg-inspector

./: .gitignore  CONTRIBUTING.md  JOURNAL.md  LICENSE  PACKAGING.md  README.md  pyproject.toml  rockcraft.yaml
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules
snap/: snapcraft.yaml
src/pkg_inspector/: __init__.py  __main__.py  checks.py  cli.py  report.py
tests/: test_checks.py  test_cli.py  test_report.py
tests/fixtures/good_project/: pyproject.toml
tests/fixtures/good_project/tests/: test_basic.py
tests/fixtures/partial_project/: pyproject.toml
