[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-inspector"
version = "0.1.0"
description = "Assess how ready a project is to be packaged and distributed."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sneha Ghosh" }]
keywords = ["packaging", "cli", "developer-tools", "linux", "distribution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
# No runtime dependencies on purpose: a dependency-free tool is far easier to
# package into a snap, a rock, or a .deb.
dependencies = []

[project.urls]
Homepage = "https://github.com/Snehagh/pkg-inspector"
Issues = "https://github.com/Snehagh/pkg-inspector/issues"

[project.scripts]
pkg-inspector = "pkg_inspector.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
